--- a/Insultor.JS/package.json
+++ b/Insultor.JS/package.json
@@ -31,5 +31,8 @@
     "react-dom": "^16.0.0",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
+  },
+  "devDependencies": {
+    "surge": "^0.19.0"
   }
 }
