--- a/Insultor.JS/package.json
+++ b/Insultor.JS/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
   },
