--- a/Insultor.JS/package.json
+++ b/Insultor.JS/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "surge": "^0.19.0"
