--- a/Insultor.JS/package.json
+++ b/Insultor.JS/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "compile": "webpack",
     "build": "webpack -p",
+    "build-dev": "webpack",
     "start": "node server.js",
-    "deploy": "npm run-script build && surge -p www"
+    "deploy": "npm run-script build && surge -p www",
+    "deploy-dev": "npm run-script build-dev && surge -p www"
   },
   "keywords": [
     "react",
