--- a/Insultor.JS/package.json
+++ b/Insultor.JS/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "express": "^4.15.3",
+    "moment-mini": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
