--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-dev": "webpack --config webpack.dev.js",
     "start": "node server.js",
     "deploy": "npm run build && surge -p www",
-    "deploy-dev": "npm run build-dev && surge -p www"
+    "deploy-dev": "npm run build-dev && surge -p www",
+    "test": "karma start"
   },
   "keywords": [
     "insults",
@@ -32,12 +33,17 @@
   },
   "dependencies": {
     "express": "^4.15.3",
+    "javascript-state-machine": "^3.0.1",
     "moment-mini": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.6.0",
+    "@types/javascript-state-machine": "^2.4.1",
+    "@types/node": "^8.0.34",
+    "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -45,8 +51,17 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-typescript": "^3.0.7",
     "rimraf": "^2.6.2",
     "surge": "^0.19.0",
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.3",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
