--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "javascript-state-machine": "^3.0.1",
+    "moment": "^2.19.1",
     "moment-mini": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -52,6 +53,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
+    "jasmine-reporters": "^2.2.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
