--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-typescript": "^3.0.7",
     "rimraf": "^2.6.2",
+    "source-map-loader": "^0.2.3",
     "surge": "^0.19.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
