--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "@types/jasmine": "^2.6.0",
     "@types/node": "^8.0.34",
+    "@types/react": "^16.0.20",
+    "@types/react-dom": "^16.0.2",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
