Show loader when face API requests are in flight
Also adds CSS modules so we can finally start using CSS scoped to components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "jsx": "react",
     "types": [
       "node"
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "*": ["*", "./@types/*"]
+    }
   },
   "exclude": [
     "node_modules",
