--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jasmine-reporters": "^2.2.1",
@@ -63,9 +64,11 @@
     "karma-typescript": "^3.0.7",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.0",
     "surge": "^0.19.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
