--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "typings-for-css-modules-loader": "^1.7.0",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "uglifyjs-webpack-plugin": "^1.1.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.11.0"
   }
