--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "url": "https://bitbucket.org/angularsen/insultor"
   },
   "dependencies": {
+    "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "javascript-state-machine": "^3.0.1",
-    "moment": "^2.19.2",
-    "moment-mini": "^2.18.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2"
