--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
+    "@types/react-router-dom": "^4.2.2",
     "awesome-typescript-loader": "^3.4.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
