--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "editor.insertSpaces": false,
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "files.autoSave": "off",
+    "tslint.autoFixOnSave": true,
 }
