--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "javascript-state-machine": "^3.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.2",
@@ -45,6 +46,7 @@
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
     "@types/react-router-dom": "^4.2.2",
+    "@types/underscore": "^1.8.5",
     "awesome-typescript-loader": "^3.4.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
