--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "url": "https://bitbucket.org/angularsen/insultor"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "javascript-state-machine": "^3.0.1",
@@ -56,6 +57,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jasmine-reporters": "^2.2.1",
@@ -72,6 +74,7 @@
     "typescript": "^2.6.1",
     "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.1"
   }
