Add scripts to generate stats.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "compile": "webpack",
     "prebuild": "npm run clean -s",
     "build": "webpack --config webpack.prod.js",
+    "build-stats": "webpack --config webpack.prod.js --json > stats.json",
     "build-dev": "webpack --config webpack.dev.js",
+    "build-dev-stats": "webpack --config webpack.dev.js --json > stats.json",
     "start": "node server.js",
     "deploy": "npm run build && surge -p www",
     "deploy-dev": "npm run build-dev && surge -p www",
