--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jasmine-reporters": "^2.2.1",
